--- a/index.html
+++ b/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>QR Code Studio - Générateur de QR Codes Gratuit</title>
+    <title>LS #Generateur de QR Code</title>
     <meta name="description" content="Créez des QR codes personnalisés gratuitement. URL, texte, Wi-Fi, vCard, réseaux sociaux. Téléchargez en PNG, SVG ou PDF. Sans inscription." />
-    <meta name="author" content="QR Code Studio" />
+    <meta name="author" content="LS #Generateur de QR Code" />
     <meta name="theme-color" content="#2563EB" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
 
-    <meta property="og:title" content="QR Code Studio - Générateur Gratuit" />
+    <meta property="og:title" content="LS #Generateur de QR Code" />
     <meta property="og:description" content="Créez des QR codes personnalisés gratuitement. URL, Wi-Fi, vCard et plus. Sans inscription." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/apercu.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="QR Code Studio" />
+    <meta name="twitter:title" content="LS #Generateur de QR Code" />
     <meta name="twitter:description" content="Générateur de QR codes personnalisables gratuit" />
   </head>
 
